--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta -->
-    <title>kating.AI — Bantu Rapikan Bahasa Skripsi Jadi Akademik</title>
+    <title>kating.AI — Humanizer Bahasa Akademik</title>
     <meta
       name="description"
       content="kating.AI adalah asisten AI untuk mahasiswa Indonesia yang membantu merapikan teks menjadi bahasa skripsi dan jurnal yang formal dan natural."
@@ -13,7 +13,7 @@
     <meta name="author" content="kating.AI" />
 
     <!-- Open Graph / WhatsApp -->
-    <meta property="og:title" content="kating.AI — Bahasa Skripsi Jadi Lebih Rapi" />
+    <meta property="og:title" content="kating.AI — Humanizer Bahasa Akademik" />
     <meta
       property="og:description"
       content="Ubah teks mentah menjadi bahasa akademik standar skripsi. Tanpa login, cepat, dan mudah digunakan."
